# slate-health

./: .env.example  .gitignore  Dockerfile.frontend  Makefile  docker-compose.prod.yml  docker-compose.yml  generate-pdf.js  index.html  package.json  plan.md  proposal.html
backend/: .env.example  Dockerfile.backend  Makefile  alembic.ini  coverage.xml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2acf024f2522_initial_schema.py  3bcd135f3633_audit_immutability_triggers.py  4def246g4744_add_revoked_refresh_tokens.py  5efg357h5855_add_oidc_state_entries.py  6fgh468i6966_nullable_patient_id_claims_scheduling.py  7ghi579j7077_unique_task_id_claims_scheduling.py  8hij680k8188_add_quality_measure_definitions.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/api/: websocket.py
backend/app/core/: logging_config.py  rate_limiter.py  resilience.py  security.py
backend/app/models/: __init__.py  agent_task.py  audit.py  base.py  claims.py  compliance.py  credentialing.py  eligibility.py  hitl_review.py  oidc_state.py  organization.py  patient.py  payer.py  prior_auth.py  quality_measure.py  refresh_token.py  scheduling.py  types.py  user.py  workflow.py
backend/app/schemas/: __init__.py  agent.py  audit.py  auth.py  claims.py  compliance.py  credentialing.py  dashboard.py  eligibility.py  payer.py  prior_auth.py  review.py  scheduling.py  workflow.py
backend/app/services/: __init__.py  agent_service.py  dashboard_service.py  review_service.py  user_service.py  workflow_service.py
backend/app/workflows/: __init__.py  agent_workflow.py  base.py  claims.py  compliance.py  credentialing.py  eligibility.py  prior_auth.py  scheduling.py  worker.py
backend/tests/: conftest.py
backend/tests/e2e/: test_agent_lifecycle.py  test_cross_agent_flow.py  test_docker_e2e.py  test_hitl_flow.py  test_load.py  test_migration_cycle.py
backend/tests/integration/: conftest.py  test_alembic_migrations.py  test_credentialing_compliance_integration.py  test_postgres_migrations.py  (+3 more)
(+199 files in other folders)
