[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slate-health-backend"
version = "0.1.0"
description = "Slate Health — Healthcare AI Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0,<1.0",
    "PyJWT>=2.9.0,<3.0",
    "pydantic[email]>=2.10.0,<3.0",
    "langgraph>=0.2.0,<1.0",
    "temporalio>=1.7.0,<2.0",
    "python3-saml>=1.16.0,<2.0",
    "authlib>=1.3.0,<2.0",
    "cryptography>=42.0,<44.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.35.0,<2.0",
]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "httpx>=0.28.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
    "testcontainers[postgres]>=4.0.0,<5.0",
    "psycopg2-binary>=2.9.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "boto3>=1.35.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Use a single session-scoped event loop for all async tests and fixtures.
# This prevents "There is no current event loop" errors when session-scoped
# async fixtures (test_engine, db_session) are shared across test directories.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]
markers = [
    "postgres: tests requiring a real PostgreSQL instance via testcontainers (release gate in CI)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
